@@ -6,3 +6,4 @@
 - image zooming and rotating
 - drag & drop support
 - save Info window geometry
+- character encoding option for Info window
